[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cenas/pong/scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Cenas/pong/scenes/field/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/pong/entities/Racket/Racket.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/pong/entities/Racket/PlayerInputComponent.gd" type="Script" id=4]
[ext_resource path="res://Cenas/pong/entities/Racket/AiInputComponent.gd" type="Script" id=5]
[ext_resource path="res://Cenas/pong/entities/Ball/Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/pong/menus/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/pong/menus/FinalScreen/FinalScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/pong/scenes/Game/ScreenShake.tscn" type="PackedScene" id=9]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Field" parent="." instance=ExtResource( 2 )]

[node name="Racket" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 256 )

[node name="PlayerInputComponent" type="Node" parent="Racket"]
script = ExtResource( 4 )

[node name="Racket2" parent="." instance=ExtResource( 3 )]
position = Vector2( 974, 256 )

[node name="AiInputComponent" type="Node" parent="Racket2"]
script = ExtResource( 5 )
ball_path = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 256 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="FinalScreen" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 256 )

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 9 )]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
